--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Bootstrap</title>
 </head>
 <body>
-        <nav class="navbar navbar-expand-lg navbar-dark mb-5 fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
             <div class="container">
               <a class="navbar-brand" href="#">Bootstrap</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,13 +43,13 @@
           </nav>
           <div class="container mt-5">
             <div class="row">
-              <div class="col-sm-12 col-lg-7">
+              <div class="col-sm-12 col-lg-7 mt-5">
                 <h1 class="title">Build fast, responsive sites with Bootstrap</h1>
                 <a href="#" class="btn btn-primary btn-lg mt-3">Get Started</a>
                 <a href="#" class="btn btn-outline-secondary btn-lg mt-3">Download</a>
                 <p class="fs-4 mt-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
               </div>
-              <div class="col-sm-12 col-lg-5 rounded mx-auto d-block">
+              <div class="col-sm-12 col-lg-5 rounded mx-auto d-block mt-5">
                   <img src="img/icons-hero.png" alt="" class="img-fluid">
               </div>
               <div class="row mt-5">
